--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Teesside Programming Club : A student programming club @ School of Computing, Teesside University">
+    <meta name="description" content="Teesside Programming Club : A programming club @ School of Computing, Teesside University">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/tees-prog-club">View on GitHub</a>
 
           <h1 id="project_title">Teesside Programming Club</h1>
-          <h2 id="project_tagline">A student programming club @ School of Computing, Teesside University</h2>
+          <h2 id="project_tagline">A programming club @ School of Computing, Teesside University</h2>
 
         </header>
     </div>
