--- a/index.html
+++ b/index.html
@@ -1,45 +1,60 @@
-<!DOCTYPE html>
-<html>
-
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Teesside Programming Club : A programming club @ School of Computing, Teesside University">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Teesside Programming Club</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>example.com</title>
+    <style>
+      html, body {
+        height: 100%;
+      }
+      body {
+        background-color: #fff;
+        background: radial-gradient(circle at center, #fff 0%, #f8f8f8 75%, #ebebeb 100%);
+        color: #222;
+        font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+        font-size: 1rem;
+        line-height: 1.5;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      main {
+        padding: 1rem;
+        text-align: center;
+      }
+      h1 {
+        font-size: 2.5rem;
+        line-height: 1.1;
+        margin: 0;
+      }
+      @media screen and (max-width: 480px) {
+        h1 {
+          font-size: 1.5rem;
+        }
+      }
+      h1::after {
+        content: "";
+        background-color: #ffe800;
+        background: repeating-linear-gradient(45deg, #e32124, #e32124 0.5rem, #f07f20 0.5rem, #f07f20 1.0rem, #fbbd1c 1.0rem, #fbbd1c 1.5rem, #731610 1.5rem, #731610 2.0rem);
+        display: block;
+        height: 0.5rem;
+        margin-top: 1rem;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+      p {
+        margin: 1rem 0 0 0;
+      }
+    </style>
   </head>
-
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/tees-prog-club">View on GitHub</a>
-
-          <h1 id="project_title">Teesside Programming Club</h1>
-          <h2 id="project_tagline">A programming club @ School of Computing, Teesside University</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="available-soon" class="anchor" href="#available-soon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Available soon!</h3>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+    <main>
+      <h1>Teesside University Programming Club</h1>
+      <p>The TUPC organisation is now archived. Thanks for all the memories folks!</p>
+    </main>
   </body>
 </html>
