--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   </head>
   <body>
     <main>
-      <h1>Teesside University Programming Club</h1>
-      <p>The TUPC organisation is now archived. Thanks for all the memories folks!</p>
+      <h1>Teesside Programming Club</h1>
+      <p>The TPC organisation is now archived. Thanks for all the memories folks!</p>
     </main>
   </body>
 </html>
